[package]
name = "pokerbot"
authors = ["29 <791603901@qq.com>"]
version = "0.0.1"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["nlh", "holdem", "gameplay", "ai", "terminal"]
categories = ["command-line-utilities", "game-development", "games", "mathematics", "simulation"]
repository = "https://github.com/czy-29/pokerbot"
homepage = "https://github.com/czy-29/pokerbot"
description = """
🚧 A Texas Hold'em Heads up pokerbot game binary and library abstraction (WIP, nothing usable for now).
"""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Because we are using 2024 Edition.
# 因为我们正在使用2024 Edition。
# https://blog.rust-lang.org/2025/02/20/Rust-1.85.0.html
rust-version = "1.85.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
est = { version = "0.10.0", features = ["slice"] }
rand = "0.9.1"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "sync"] }

[dev-dependencies]

[build-dependencies]
version_check = "0.9.5"

[features]
